<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>OrangeHrm</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <resultsPatternAllure>**/allure-results</resultsPatternAllure>
        <allure.version>2.17.3</allure.version>
        <allure.testng.version>2.17.3</allure.testng.version>
        <aspectj.version>1.9.19</aspectj.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.21.0</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>5.8.0</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>2.27.0</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.22.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.35</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.23.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <debugForkedProcess>true</debugForkedProcess>
                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                    <failIfNoTests>false</failIfNoTests>
                    <encoding>UTF-8</encoding>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/test_suites/smoke_suite.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>Smoke</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M5</version>
                        <configuration>
                            <suiteXmlFiles>
                                <suiteXmlFile>src/test/resources/test_suites/smoke_suite.xml</suiteXmlFile>
                            </suiteXmlFiles>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>


        <!--<?xml version="1.0" encoding="UTF-8"?>-->
<!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
<!--         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
<!--         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
<!--    <modelVersion>4.0.0</modelVersion>-->

<!--    <groupId>org.example</groupId>-->
<!--    <artifactId>OrangeHrm</artifactId>-->
<!--    <version>1.0-SNAPSHOT</version>-->

<!--    <properties>-->
<!--        <maven.compiler.source>17</maven.compiler.source>-->
<!--        <maven.compiler.target>17</maven.compiler.target>-->
<!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
<!--        <resultsPatternAllure>**/allure-results</resultsPatternAllure>-->
<!--        <allure.version>2.17.3</allure.version>-->
<!--        <allure.testng.version>2.17.3</allure.testng.version>-->
<!--        <aspectj.version>1.9.19</aspectj.version>-->
<!--    </properties>-->

<!--    <dependencies>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.seleniumhq.selenium</groupId>-->
<!--            <artifactId>selenium-java</artifactId>-->
<!--            <version>4.21.0</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.testng/testng &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.testng</groupId>-->
<!--            <artifactId>testng</artifactId>-->
<!--            <version>7.10.1</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.projectlombok/lombok &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.projectlombok</groupId>-->
<!--            <artifactId>lombok</artifactId>-->
<!--            <version>1.18.32</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.javafaker/javafaker &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>com.github.javafaker</groupId>-->
<!--            <artifactId>javafaker</artifactId>-->
<!--            <version>1.0.2</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>io.github.bonigarcia</groupId>-->
<!--            <artifactId>webdrivermanager</artifactId>-->
<!--            <version>5.8.0</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.qameta.allure/allure-testng &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>io.qameta.allure</groupId>-->
<!--            <artifactId>allure-testng</artifactId>-->
<!--            <version>2.27.0</version>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.aspectj/aspectjweaver &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.aspectj</groupId>-->
<!--            <artifactId>aspectjweaver</artifactId>-->
<!--            <version>1.9.22.1</version>-->
<!--            <scope>runtime</scope>-->
<!--        </dependency>-->
<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core &ndash;&gt;-->
<!--        <dependency>-->
<!--            <groupId>org.apache.logging.log4j</groupId>-->
<!--            <artifactId>log4j-core</artifactId>-->
<!--            <version>2.23.1</version>-->
<!--        </dependency>-->
<!--    </dependencies>-->

<!--    <build>-->
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-compiler-plugin</artifactId>-->
<!--                <version>3.8.0</version>-->
<!--                <configuration>-->
<!--                    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
<!--                    <source>17</source>-->
<!--                    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
<!--                    <target>17</target>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.0.0-M5</version>-->
<!--                <configuration>-->
<!--                    <forkCount>1</forkCount>-->
<!--                    <reuseForks>true</reuseForks>-->
<!--                    <debugForkedProcess>true</debugForkedProcess>-->

<!--                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>-->
<!--                    <failIfNoTests>false</failIfNoTests>-->
<!--                    <encoding>UTF-8</encoding>-->
<!--                    &lt;!&ndash;                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
<!--                    <suiteXmlFiles>-->
<!--                        <suiteXmlFile>smoke_suite.xml</suiteXmlFile>-->
<!--&lt;!&ndash;                        <suiteXmlFile>E2E_suite.xml</suiteXmlFile>&ndash;&gt;-->
<!--&lt;!&ndash;                        <suiteXmlFile>regressionSuite.xml</suiteXmlFile>&ndash;&gt;-->
<!--&lt;!&ndash;                        <suiteXmlFile>UI_Smoke.xml</suiteXmlFile>&ndash;&gt;-->
<!--                    </suiteXmlFiles>-->
<!--                    <testFailureIgnore>true</testFailureIgnore>-->
<!--                    &lt;!&ndash; java heap size = Xms2048m = 2GB &ndash;&gt;-->
<!--                    &lt;!&ndash; JVM Option to set command line &ndash;&gt;-->
<!--                    &lt;!&ndash; javaagent: used to take this jar files as paramater to pass To JVM &ndash;&gt;-->
<!--                    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
<!--                    <argLine>-->
<!--                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
<!--                    </argLine>-->
<!--                    &lt;!&ndash; Take output to target &ndash;&gt;-->
<!--                    <systemPropertyVariables>-->
<!--                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>-->
<!--                    </systemPropertyVariables>-->
<!--                </configuration>-->
<!--                <dependencies>-->
<!--                    <dependency>-->
<!--                        <groupId>org.aspectj</groupId>-->
<!--                        <artifactId>aspectjweaver</artifactId>-->
<!--                        <version>1.9.19</version>-->
<!--                    </dependency>-->
<!--                </dependencies>-->
<!--            </plugin>-->
<!--            &lt;!&ndash; give IntelliJ acceptable to run and open allure report automatic By download allure binary in project-->
<!--            download allure binary &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>io.qameta.allure</groupId>-->
<!--                <artifactId>allure-maven</artifactId>-->
<!--                <version>2.10.0</version>-->
<!--                <configuration>-->
<!--                    &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
<!--                    <reportVersion>${allure.version}</reportVersion>-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--        </plugins>-->
<!--    </build>-->

<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>Smoke</id>-->
<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.apache.maven.plugins</groupId>-->
<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
<!--                        <version>3.0.0-M5</version>-->
<!--                        <configuration>-->
<!--                            <suiteXmlFiles>-->
<!--                                <suiteXmlFile>src/test/resources/test_suites/smoke_suite.xml</suiteXmlFile>-->
<!--                            </suiteXmlFiles>-->
<!--                        </configuration>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->

<!--    </profiles>-->
<!--</project>-->